<resources>
    <string name="app_name">Aed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Important Strings -->
    <string name="sheep_released_identifer">RELEASED</string>
    <string name="sheep_escrow_identifer">ESCROW</string>

    <!-- Account Label Strings -->
    <string name="account_balance_label">Balance:</string>
    <string name="account_email_label">Email:</string>
    <string name="account_email_verified_label">Email Verified?:</string>
    <string name="account_wallet_network_label">Network:</string>
    <string name="account_smart_contract_label">Smart Contract Used:</string>

    <!-- Sheep Label Strings -->
    <string name="register_sheep_button_label">Register Card</string>
    <string name="release_sheep_button_label">Release Card</string>
    <string name="transfer_sheep_button_label">Transfer</string>
    <string name="create_sheep_auction_button_label">Auction Card</string>
    <string name="sheep_name_label">Name:</string>
    <string name="sheep_uid_label">UID:</string>
    <string name="sheep_hp_label">HP:</string>
    <string name="sheep_dp_label">DP:</string>
    <string name="sheep_dna_label">DNA:</string>
    <string name="sheep_owner_name_label">Owner:</string>
    <string name="sheep_released_status_label">Released?:</string>
    <string name="sheep_minted_date_label">Minted At:</string>
    <string name="empty_deck_message">Looks Like you dont have any Sheep! Why don\'t you fix that by registering your cards or buying some in the Auction House!</string>

    <!-- Auction Label Strings -->
    <string name="auction_current_price_label">Current Price:</string>
    <string name="auction_starting_price_label">Starting Price DB$:</string>
    <string name="auction_ending_price_label">Ending Price DB$:</string>
    <string name="auction_owner_name_label">Seller:</string>
    <string name="auction_remaining_time_label">Time Remaining:</string>
    <string name="auction_started_at_label">Auction Started At:</string>
    <string name="create_auction_finalize_button_label">Create Auction:</string>
    <string name="auction_sheep_name_label">Sheep Name:</string>
    <string name="auction_cancel_auction_button_label">Cancel Auction</string>
    <string name="auction_post_bid_button_label">Post Bid:</string>
    <string name="auction_auction_winner_label">Winner:</string>
    <string name="auction_final_bid_label">Winning Bid:</string>

    <!-- Auction Spinner Items -->
    <string-array name="auction_views">
    <item>Live Auctions</item>
    <item>My Auctions</item>
    </string-array>


    <!-- QR Code related strings -->
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="ok">OK</string>
</resources>
